fix: fix the bug with the disappearance of part of the button
fix the bug with the disappearance of a part of the button when the text in the card header overflows

--- a/src/css/blocks/gallery/__btn-like/gallery__btn-like.css
+++ b/src/css/blocks/gallery/__btn-like/gallery__btn-like.css
@@ -1,10 +1,10 @@
 .gallery__btn-like {
   display: block;
   width: 22px;
+  min-width: 22px;
   height: 19px;
-  padding-left: 18px;
+  box-sizing: border-box;
   border: none;
-  margin-left: 30px;
   background: transparent;
   background-image: url('../../accets/images/gallery-btn-like.svg');
   cursor: pointer;
