--- a/src/css/blocks/gallery/__item-title/gallery__item-title.css
+++ b/src/css/blocks/gallery/__item-title/gallery__item-title.css
@@ -1,6 +1,7 @@
 .gallery__item-title {
   overflow: hidden;
   margin: 0;
+  margin-right: 25px;
   color: var(--main-color-dark);
   font-family: var(--main-font);
   font-size: 24px;
